
=item *

Fixed a bug in both B<innd> and B<nnrpd> answers to LIST commands which
did not check for a valid dot-stuffed output.

=item *

Fixed a bug in B<innreport> which was not correctly summing B<innd>
stats when I<hostname> was set as an IPv6 address instead of a fully
qualified domain name.  Thanks to Petr Novopashenniy for the bug report.

=item *

Fixed a bug on the parsing of Message-ID: and Supersedes: headers
which contained trailing whitespaces.  The article ended up
corrupted because of an unexpected "\r" in the middle of the header.

=item *

Fixed a bug in how leading whitespaces were treated in headers.  The
HDR, XHDR and XPAT commands were not properly showing leading whitespaces
in header values.  Besides, "\n" and "\r" were both changed into spaces
whereas "\r\n" just was to be removed.  As for B<archive>, B<makehistory>
and B<tdx-util>, they did not keep leading whitespaces in headers when
generating overview data, and B<archive> did not change "\n"
(when not preceded by "\r") into a space when generating overview data.

=item *

Fixed a bug in B<cvtbatch> which was returning only the size of the
headers of an article when the C<b> parameter was used with the B<-w>
flag.  It now correctly returns the size of the whole article, which
is what C<b> is supposed to do.  Besides, B<cvtbatch> has a new C<t>
parameter which can be used with the B<-w> flag, so as to retrieve
the arrival time of an article.

=item *

B<batcher> has not supported the retrieval of an article with its
file name for a long time.  The B<-S> flag is therefore removed.

=item *

B<news.daily> no longer sends superfluous mails when the B<nomail>
keyword is given.  Mail is only sent when there is real output.
Previously, there would always be headings and empty lines useful
to structure the full report, which are now ommitted.  Also, the
output of programs executed with B<postexec> is now included in the
regular mail.  Thanks to Florian Schlichting for the patch.

=item *
